own-tutorial/python-fastapi-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfastapiapp-deployment
  labels:
    app: myfastapiapp 
spec:
  selector:
    matchLabels:
      app: myfastapiapp 
  template:
    metadata:
      labels:
        app: myfastapiapp
    spec:
      containers:
      - name: fastapi
        image: localhost:32000/myfastapiapp:registry
        ports:
        - containerPort: 8000
          protocol: TCP
