own-tutorial/python-fastapi-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfastapiapp-svc
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: myfastapiapp
  type: NodePort
