own-tutorial/python-fastapi-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfastapiapp-ingress
  labels:
    app: myfastapiapp
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: myfastapiapp-svc
            port: 
              number: 8080
